# xennf

./: .gitignore  DDPM_example.ipynb  Scoring.ipynb  custom_distributions.py  pyproject.toml  temporary_pca_file.csv
nf/: TODO.md  config_writer.py  config_writer_GRAPHS.py  config_writer_POTTS.py  data.py  mclust.R  nf.ipynb  nf.py  nf_experiment.py  nf_graphs.py  nf_graphs_batched.py  nf_graphs_batched_EW.py  nf_graphs_contrastive.py  nf_graphs_custom_loss.py  nf_graphs_custom_loss_copy.py  nf_graphs_lr_optim.py  nf_graphs_potts.py  nf_graphs_transformers.py  nf_potts.py  pca.ipynb  temporary_pca_file.csv  utils.py  xenium_cluster.py  zuko_flow.py
nf/.ipynb_checkpoints/: nf-checkpoint.ipynb
nf/config/: config1.yaml  config2.yaml  config3.yaml  config4.yaml  config5.yaml  configCNF_128.yaml  configCNF_512.yaml  config_DLPFC_testing.yaml
nf/config/config_DLPFC/: config0.yaml  config1.yaml  config10.yaml  config100.yaml  config101.yaml  config102.yaml  config103.yaml  config104.yaml  config105.yaml  config106.yaml  config107.yaml  config108.yaml  config109.yaml  config11.yaml  config110.yaml  config111.yaml  config112.yaml  config113.yaml  config114.yaml  config115.yaml  config116.yaml  config117.yaml  config118.yaml  config119.yaml  config12.yaml  config120.yaml  config121.yaml  config122.yaml  config123.yaml  config124.yaml  config125.yaml  config126.yaml  config127.yaml  config128.yaml  config129.yaml  config13.yaml  config130.yaml  config131.yaml  config132.yaml  config133.yaml  (+176 more)
nf/config/config_SYNTHETIC/: config0.yaml  config1.yaml  config10.yaml  config100.yaml  config101.yaml  config102.yaml  config103.yaml  config104.yaml  config105.yaml  config106.yaml  config107.yaml  config108.yaml  config109.yaml  config11.yaml  config110.yaml  config111.yaml  config112.yaml  config113.yaml  config114.yaml  config115.yaml  config116.yaml  config117.yaml  config118.yaml  config119.yaml  config12.yaml  config120.yaml  config121.yaml  config122.yaml  config123.yaml  config124.yaml  config125.yaml  config126.yaml  config127.yaml  config128.yaml  config129.yaml  config13.yaml  config130.yaml  config131.yaml  config132.yaml  config133.yaml  (+408 more)
nf/results/: results.ipynb
nf/results/DLPFC/Hierarchical/K=7/clusters/: cluster_metrics.json
nf/results/DLPFC/K-Means/K=7/clusters/: cluster_metrics.json
nf/results/DLPFC/Leiden/resolution=0.4/clusters/: cluster_metrics.json
nf/results/DLPFC/Louvain/resolution=0.195/clusters/: cluster_metrics.json
nf/results/DLPFC/Louvain/resolution=0.21/clusters/: cluster_metrics.json
nf/results/DLPFC/Louvain/resolution=0.25/clusters/: cluster_metrics.json
nf/results/DLPFC/mclust/num_pcs=10/K=7/clusters/: cluster_metrics.json  clusters_K=7.csv
nf/results/DLPFC/mclust/num_pcs=15/K=7/clusters/: cluster_metrics.json  clusters_K=7.csv
nf/results/DLPFC/mclust/num_pcs=20/K=7/clusters/: cluster_metrics.json  clusters_K=7.csv
nf/results/DLPFC/mclust/num_pcs=5/K=7/clusters/: cluster_metrics.json  clusters_K=7.csv
nf/results/DLPFC/mclust/num_pcs=8/K=7/clusters/: cluster_metrics.json  clusters_K=7.csv
nf/results/SYNTHETIC/Hierarchical/DATA_DIM=5/K=7/clusters/: cluster_metrics.json
nf/results/SYNTHETIC/K-Means/DATA_DIM=5/K=7/clusters/: cluster_metrics.json
nf/results/SYNTHETIC/Leiden/DATA_DIM=5/resolution=0.47/clusters/: cluster_metrics.json
nf/scratch/: config0.yaml  data.ipynb  dlpfc.ipynb  mclust.R  results_plotting.ipynb  temporary_pca_file.csv  yaml_reader.ipynb
nf/scripts/: gpu_0.sh  gpu_1.sh  gpu_2.sh  gpu_4.sh  gpu_5.sh  gpu_6.sh
(+599 files in other folders)
